2011-12-12  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [Qt][WK2] Remove dead code from QtWebPageProxy
        https://bugs.webkit.org/show_bug.cgi?id=74296

        Reviewed by Andreas Kling.

        * UIProcess/qt/QtWebPageProxy.cpp:
        * UIProcess/qt/QtWebPageProxy.h:

2011-12-12  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed build fix.

        Add missing files from https://bugs.webkit.org/show_bug.cgi?id=73016

        * UIProcess/API/qt/qwebnavigationhistory.cpp: Added.
        (QWebNavigationListModelPrivate::QWebNavigationListModelPrivate):
        (QWebNavigationListModelPrivate::createWebNavigationModel):
        (QWebNavigationHistoryPrivate::QWebNavigationHistoryPrivate):
        (QWebNavigationHistoryPrivate::createHistory):
        (QWebNavigationHistoryPrivate::reset):
        (QWebNavigationHistoryPrivate::goBackTo):
        (QWebNavigationHistoryPrivate::goForwardTo):
        (QWebNavigationListModel::QWebNavigationListModel):
        (QWebNavigationListModel::~QWebNavigationListModel):
        (QWebNavigationListModel::rowCount):
        (QWebNavigationListModel::data):
        (QWebNavigationHistory::QWebNavigationHistory):
        (QWebNavigationHistory::~QWebNavigationHistory):
        (QWebNavigationHistory::backItems):
        (QWebNavigationHistory::forwardItems):
        * UIProcess/API/qt/qwebnavigationhistory_p.h: Added.
        * UIProcess/API/qt/qwebnavigationhistory_p_p.h: Added.

2011-12-12  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Move postMessage/messageReceived APIS to experimental

        Reviewed by Tor Arne Vestbø.

        * UIProcess/API/qt/qquickwebview.cpp:
        (QQuickWebViewPrivate::setPageProxy):
        (QQuickWebViewExperimental::QQuickWebViewExperimental):
        (QQuickWebViewExperimental::postMessage):
        * UIProcess/API/qt/qquickwebview_p.h:
        * UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_messaging.qml:
